--- a/1_assign.html
+++ b/1_assign.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 	<title>music world</title>
 	<link rel="stylesheet" href="css/1_assign.css">
   <link rel="stylesheet" type="text/css" href=" https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,7 +13,7 @@
 <div class="head">
 	<h1>Musical<br> World</h1>
 	
-	<img  src="img/logo2.png" height="150" width="360">
+	<img  src="img/logo2.png" height="150" width="360" alt="akankshaS">
 	
 	<nav>
 		<ul>
@@ -28,19 +29,19 @@
 <div class="container_12" >
 <div class="first">
   <div class="grid_4 alpha">
-  <img src="img/yahoo.jpg" width="320" height="200">
+  <img src="img/yahoo.jpg" width="320" height="200" alt="akanksha">
   <h3> <a href="https://www.google.co.in/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=yahoo%20music">!YAHOO</a></h3>
   <p>200 - eBizMBA Rank | 55,000,000 - Estimated Unique Monthly Visitors | *100* - Compete Rank | *300* - Quantcast Rank | NA - Alexa Rank | Last Updated: November 1, 2016.
 The Most Popular Music Websites | eBizMBA</p>
   </div>
   <div class="grid_4">
-  <img src="img/spotify.png" width="320" height="200">
+  <img src="img/spotify.png" width="320" height="200" alt="akanksha">
   <h3><a href="https://www.google.co.in/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=spotify+music">SPOTIFY</a></h3>
   <p>445 - eBizMBA Rank | 35,000,000 - Estimated Unique Monthly Visitors | 106 - Compete Rank | 930 - Quantcast Rank | 300 - Alexa Rank | Last Updated: November 1, 2016.
 The Most Popular Music Websites | eBizMBA</p>
   </div>
   <div class="grid_4 omega">
-  <img src="img/google_play.png" width="320" height="200">
+  <img src="img/google_play.png" width="320" height="200" alt="akanksha">
   <h3><a href="3_assign.html">!GOOGLE PLAY</a></h3>
   <p>250 - eBizMBA Rank | 52,000,000 - Estimated Unique Monthly Visitors | *150* - Compete Rank | *350* - Quantcast Rank | NA - Alexa Rank | Last Updated: November 1, 2016.
 The Most Popular Music Websites | eBizMBA</p>
@@ -50,19 +51,19 @@ The Most Popular Music Websites | eBizMBA</p>
   </div>
   <div class=container_12>
   <div class="grid_4 alpha">
-  <img src="img/sc.jpg" width="320" height="200">
+  <img src="img/sc.jpg" width="320" height="200" alt="akanksha">
   <h3> <a href="h#">!SOUND CLASS </a></h3>
   <p>253 - eBizMBA Rank | 50,000,000 - Estimated Unique Monthly Visitors | 328 - Compete Rank | NA - Quantcast Rank | 177 - Alexa Rank | Last Updated: November 1, 2016.
 The Most Popular Music Websites | eBizMBA</p>
   </div>
   <div class="grid_4">
-  <img src="img/tunein.jpg" width="320" height="200">
+  <img src="img/tunein.jpg" width="320" height="200" alt="akanksha">
   <h3><a href="#">TUNEIN</a></h3>
   <p>445 - eBizMBA Rank | 85,000,000 - Estimated Unique Monthly Visitors | 16 - Compete Rank | 9 - Quantcast Rank | 30 - Alexa Rank | Last Updated: November 1, 2016.
 The Most Popular Music Websites | eBizMBA</p>
   </div>
   <div class="grid_4 omega">
-  <img src="img/myspcae.png" width="320" height="200">
+  <img src="img/myspcae.png" width="320" height="200" alt="akanksha">
   <h3><a href="https://www.google.co.in/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=google%20play%20music">!My SPACE</a></h3>
   <p>250 - eBizMBA Rank | 49,000,000 - Estimated Unique Monthly Visitors | *10* - Compete Rank | *300* - Quantcast Rank | NA - Alexa Rank | Last Updated: November 1, 2016.
 The Most Popular Music Websites | eBizMBA</p>
@@ -73,11 +74,11 @@ The Most Popular Music Websites | eBizMBA</p>
  
 <div class="hero">
   <div class="container_12"> 
-   <img class="grid_12" src="img/band.png" width="960px" height="500px"> 
+   <img class="grid_12" src="img/band.png" width="960" height="500" alt="akanksha"> 
     <ol >
-     <li id="list" class="grid_4"><a href="#">Choose music</a></li>
-     <li id="list" class="grid_4"><a href="#">Choose band</a></li>
-     <li id="list" class="grid_4"><a href="#">Choose singer</a></li>
+     <li id="list1" class="grid_4"><a href="#">Choose music</a></li>
+     <li id="list1" class="grid_4"><a href="#">Choose band</a></li>
+     <li id="list1" class="grid_4"><a href="#">Choose singer</a></li>
     </ol>
   </div>
 </div>
@@ -86,7 +87,7 @@ The Most Popular Music Websites | eBizMBA</p>
 
 <div class="grid_4">
 
-<img src="img/lata.jpg">
+<img src="img/lata.jpg" alt="akanksha">
 
 </div>
 <div class="grid_8">
@@ -105,11 +106,11 @@ Singh became more well-known with the release of "Tum Hi Ho" from Aashiqui 2 (20
 </div>
 <div class="lim">
 <div class="grid_4">
-<img src="img/arijit.jpg">
+<img src="img/arijit.jpg" alt="akanksha">
 </div>
 </div>
 </div>
-</div>
+
 <div class="lb">
 <h1>Wanna Create the account??<a href="2_assign.html">Click Here</a></h1>
 </div>
