--- a/4_assign.html
+++ b/4_assign.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 	<title>Choose One</title>
 	<link rel="stylesheet" type="text/css" href="css/960_12_col.css">
 	<link rel="stylesheet" type="text/css" href="css/4_assign.css">
@@ -15,7 +16,7 @@
 <h3><a href="#"> MySpace</a>	</h3>
 <h3><a href="#" >SoundCloud</a></h3>
 <h3><a href="#"> tunein</a></h3>
-<div>
+</div>
 </div>
 
 </body>
