--- a/2_assign.html
+++ b/2_assign.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="UTF-8">
 	<title>2nd page</title>
 	<link rel="stylesheet" href="css/2_assign.css">
 	<link rel="stylesheet" type="text/css" href="css/960_12_col.css">
