--- a/3_assign.html
+++ b/3_assign.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
 	<title>assign_3</title>
 	<link rel="stylesheet" href="css/3_assign.css">
 	<link rel="stylesheet" href="css/reset.css">
@@ -14,7 +15,7 @@
 <body >
 <div class="header">
 <header>
-	<img src="img/google_play2.png" width="350" height="80">
+	<img src="img/google_play2.png" width="350" height="80" alt="akanksha">
 	<form>
     <input type="text" name="search" placeholder="Search..">
     </form>
@@ -64,17 +65,17 @@
 <div class="f">
 <div class="foo3">
 <div class="m">
-	<img src="img/bb.png" width="451" height="310">
+	<img src="img/bb.png" width="451" height="310" alt="akanksha">
 </div>
 </div>
 
 <div class="foo3">
-	<img src="img/tt.jpg" width="451" height="312" >
+	<img src="img/tt.jpg" width="451" height="312" alt="akanksha">
 </div>
 
 <div class="foo3">
    <div class="n">
-	 <img src="img/br.jpg" width="451s" height="312">
+	 <img src="img/br.jpg" width="451" height="312" alt="akanksha">
    </div>
 </div>
 </div>
@@ -83,7 +84,7 @@
 
 
 
-<img class="ni" src="img/of.jpg" width="100%" height="450">
+<img class="ni" src="img/of.jpg" width="100%" height="450" alt="akanksha">
 <div class="container_12 ">
 <div class="grid_12">
 <h1 class="head1" >New Release Hit Films!</h1>
@@ -98,30 +99,30 @@
 </div>
 <hr>
 <div class="grid_2">
-<img src="img/jl.jpg" width="150" height="200">
+<img src="img/jl.jpg" width="150" height="200" alt="akanksha">
 </div>
 <div class="grid_2">
-<img src="img/i.jpg" width="150" height="200">
+<img src="img/i.jpg" width="150" height="200" alt="akanksha">
 </div>
 <div class="grid_2">
-<img src="img/a.jpg" width="150" height="200">
+<img src="img/a.jpg" width="150" height="200" alt="akanksha">
 </div>
 <div class="grid_2">
-<img src="img/n.jpg" width="150" height="200">
+<img src="img/n.jpg" width="150" height="200" alt="akanksha">
 </div>
 <div class="grid_2">
-<img src="img/jl.jpg" width="150" height="200">
+<img src="img/jl.jpg" width="150" height="200" alt="akanksha">
 </div>
 <div class="grid_2">
-<img src="img/j.jpg" width="150" height="200">
+<img src="img/j.jpg" width="150" height="200" alt="akanksha">
 </div>
 <div class="row">
 
 <div class="grid_5">
 <table>
-<tr><td><img src="img/google_play2.png" height="100px"></td></tr>
+<tr><td><img src="img/google_play2.png" height="100" alt="akanksha"></td></tr>
 <tr><td><h1>Google Play</h1></td></tr>
-<tr><td><img src="img/gp.png" width="100%"></td></tr>
+<tr><td><img src="img/gp.png" width="100%" alt="akanksha"></td></tr>
 <tr><td><h2>Google Play Store on the app</h2></td></tr>
 
 </table>
@@ -137,10 +138,9 @@
   
 </div>
 
-</div>
+
 <div class="footer3">
 <footer> 
-<footer>
 <div class="foot">
 <div class="container_12">
 <div class="grid_12"><p>You can also contact us HERE !!</p>></div>
@@ -149,7 +149,7 @@
   <div class="grid_4"><div class="twitter"><a  href="#"><i style="color:black" class="fa fa-twitter fa-3x" aria-hidden="true"></i></a></div></div>
   </div>
 
-</footer>
+</div>
 
 </footer>
 </div>
